--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
 
 
-
 {% block body %}
 <h1>Notes</h1>
+{% for note in notes %}
+    <h3><a href="{{ path('app_note_show', {id: note.id}) }}">{{ note.title }}</a></h3>
+{% endfor %}
 {% endblock %}
