Ajout methode de recherce pour les notes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
     </head>
     <body>
     <header>
-<a href="/admin">Admin</a>
+<a href="/">Home</a> | <a href="/notes">Notes</a> | <a href="/admin">Admin</a> 
     </header>
         {% block body %}{% endblock %}
         <footer>
